--- a/css/styles.css
+++ b/css/styles.css
@@ -64,11 +64,11 @@ body {
 .address-main .address-links .link:focus {
   color: #404bbf;
 }
-.section-main {
+.hero {
   background-color: #2e2f42;
   padding: 188px 0;
 }
-.section-main-title {
+.hero-title {
   font-weight: 700;
   font-size: 56px;
 
@@ -79,7 +79,7 @@ body {
   color: #fff;
   max-width: 496px;
 }
-.section-main .btn-section-main {
+.hero-btn {
   background: #4d5ae5;
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -97,21 +97,23 @@ body {
   border: none;
   border-radius: 4px;
 }
-.section-main .btn-section-main:hover,
-.section-main .btn-section-main:focus {
+.hero-btn:hover,
+.hero-btn:focus {
   background-color: #404bbf;
 }
-.section-two {
+.benefits {
   padding: 120px 0;
 }
-.section-two .visually-hidden {
+.benefits-title {
   visibility: hidden;
 }
-.section-two .section-two-list {
+.benefits-list {
   display: flex;
   gap: 24px;
 }
-.section-two .section-two-list .section-title {
+.benefits-item {
+}
+.benefits-subtitle {
   font-weight: 500;
   font-size: 20px;
 
@@ -120,7 +122,7 @@ body {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-.section-two .section-two-list .section-paragraph {
+.benefits-par {
   font-weight: 400;
   font-size: 16px;
 
@@ -129,10 +131,10 @@ body {
   letter-spacing: 0.02em;
   color: #434455;
 }
-.section-three {
+.team {
   background-color: #f4f4fd;
 }
-.section-three .section-three-title {
+.team-title {
   font-weight: 700;
   font-size: 36px;
 
@@ -143,10 +145,10 @@ body {
   text-transform: capitalize;
   color: #2e2f42;
 }
-.section-three .section-three-list {
+.team-list {
   background-color: #ffffff;
 }
-.section-three .section-three-list .section-title {
+.team-subtitle {
   font-weight: 500;
   font-size: 20px;
 
@@ -156,7 +158,7 @@ body {
   text-align: center;
   color: #2e2f42;
 }
-.section-three .section-three-list .section-par {
+.team-par {
   font-weight: 400;
   font-size: 16px;
 
@@ -166,7 +168,7 @@ body {
   text-align: center;
   color: #434455;
 }
-.section-four .section-four-title {
+.portfolio-title {
   font-weight: 700;
   font-size: 36px;
 
@@ -177,7 +179,7 @@ body {
   text-transform: capitalize;
   color: #2e2f42;
 }
-.section-four .section-four-list .section-title {
+.portfolio-subtitle {
   font-weight: 500;
   font-size: 20px;
 
@@ -186,7 +188,7 @@ body {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-.section-four .section-four-list .section-par {
+.portfolio-par {
   font-weight: 400;
   font-size: 16px;
 
