edit style in header

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,33 +13,29 @@ img {
   display: block;
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
 /* #region Header */
 .header {
   border-bottom: 1px solid #e7e9fc;
-  display: flex;
 }
-.container {
+.header .container {
   width: 1158px;
   margin: 0 auto;
   padding: 0 15px;
+  display: flex;
+}
+.nav {
+  display: flex;
+  align-items: center;
+}
+.nav-list {
+  display: flex;
+  gap: 40px;
 }
 .nav-logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 18px;
+  margin-right: 76px;
 
   /* line-height: 21px; */
   line-height: 1.17;
@@ -66,6 +62,11 @@ img {
 .header-address {
   font-style: normal;
 }
+.header-address-list {
+  display: flex;
+  gap: 40px;
+}
+
 .header-address .link {
   font-weight: 400;
   font-size: 16px;
@@ -121,6 +122,19 @@ img {
 }
 /* #endregion */
 /* #region Benefits */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 .benefits {
   padding: 120px 0;
 }
