--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,8 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  padding-top: 24px;
+  padding-bottom: 24px;git
 }
 .nav-item:hover,
 .nav-item:focus {
