--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,7 @@ img {
 .benefits-list {
   display: flex;
   gap: 24px;
+  padding: 0;
 }
 .benefits-item {
   width: calc((100% - 3 * 24px) / 4);
