--- a/css/styles.css
+++ b/css/styles.css
@@ -254,7 +254,7 @@ img {
   padding: 0;
 }
 .portfolio-item {
-  width: calc((100% - 2 * 24px) / 3);
+  width: calc((100% - 48px) / 3);
 }
 .portfolio .container {
   padding: 32px 16px;
