--- a/css/styles.css
+++ b/css/styles.css
@@ -284,7 +284,10 @@ img {
 /* #region Footer */
 .footer {
   background-color: #2e2f42;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
+
 .footer .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -295,6 +298,8 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .footer .logo-name {
   color: #f4f4fd;
@@ -308,5 +313,6 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  max-width: 264px;
 }
 /* #endregion */
