--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,8 @@ a {
 }
 ul {
   list-style-type: none;
+  padding-left: 0;
+  margin: 0;
 }
 img {
   display: block;
@@ -228,7 +230,7 @@ img {
   text-align: center;
 }
 /* #endregion */
-/* #region Poortfolio */
+/* #region Portfolio */
 .portfolio {
   padding-top: 120px;
   padding-bottom: 120px;
