--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,22 @@ ul {
   padding-left: 0;
   margin: 0;
 }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
 img {
   display: block;
+}
+.container {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
 
 /* #region Header */
@@ -20,10 +34,8 @@ img {
   border-bottom: 1px solid #e7e9fc;
 }
 .header .container {
-  width: 1158px;
-  margin: 0 auto;
-  padding: 0 15px;
   display: flex;
+  align-items: center;
 }
 .nav {
   display: flex;
@@ -58,6 +70,7 @@ img {
   color: #2e2f42;
   padding-top: 24px;
   padding-bottom: 24px;
+  display: block;
 }
 
 .nav-item:hover,
@@ -66,6 +79,7 @@ img {
 }
 .header-address {
   font-style: normal;
+  margin-left: auto;
 }
 .header-address-list {
   display: flex;
@@ -102,6 +116,9 @@ img {
   text-align: center;
   color: #fff;
   max-width: 496px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 48px;
 }
 .hero-btn {
   background: #4d5ae5;
@@ -120,6 +137,8 @@ img {
   height: 56px;
   border: none;
   border-radius: 4px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -204,7 +223,7 @@ img {
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
     0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
-.team .container {
+.team-content {
   padding-top: 32px;
   padding-bottom: 32px;
 }
@@ -235,9 +254,6 @@ img {
   padding-top: 120px;
   padding-bottom: 120px;
 }
-.portfolio > .container {
-  width: 1158px;
-}
 
 .portfolio-title {
   font-weight: 700;
@@ -261,7 +277,7 @@ img {
 .portfolio-item {
   width: calc((100% - 48px) / 3);
 }
-.container-item {
+.portfolio-content {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
